2006-11-23  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-comment-indent): Do not move point in
	default case.

2006-11-21  Romain Francoise  <romain@orebokech.com>

	* emacs-lisp/find-func.el (find-library-name): Don't strip ".el"
	from library name (reverts change of 2005-10-25).

2006-11-21  Lennart Borgman  <lennart.borgman.073@student.lu.se>

	* tutorial.el (tutorial--default-keys): Add newline and
	delete-backward-char bindings.
	(tutorial--detailed-help): Save excursion when finding keys.
	Correct warning string for M-x FOO case.
	(tutorial--display-changes): Print special keys in tutorial style.
	Tweak search regexp for changed keys.

2006-11-21  Bob Rogers  <rogers-emacs@rgrjr.dyndns.org>  (tiny change)

	* thingatpt.el (thing-at-point-url-at-point):  Don't add a
	redundant scheme.

2006-11-21  Diane Murray  <disumu@x3y2z1.net>  (tiny change)

	* thingatpt.el (thing-at-point-uri-schemes): Added schemes that
	are new to the list at IANA.  Also added irc, mms, mmsh.

2006-11-20  J.D. Smith  <jdsmith@as.arizona.edu>

	* progmodes/idlw-help.el (idlwave-html-help-location): Fail
	gracefully for missing help packages.
	(idlwave-help-assistant-open-link): Open full links.
	(idlwave-help-assistant-help-with-topic): Direct help link.

	* progmodes/idlwave.el (idlwave-mode): Set
	add-log-current-defun-function.
	(idlwave-current-routine-fullname): Added, to support add-log.
	(idlwave-convert-xml-system-routine-info): Simplify XML parsing
	to reflect improvements to xml-parse-file.
	(idlwave-mode-menu-def): New binding for help-with-topic.

	* progmodes/idlw-shell.el (idlwave-shell-filter-directory):
	Handle extra newlines and spaces.
	(idlwave-shell-mode-map): Add help-with-topic.

2006-11-20  Chong Yidong  <cyd@stupidchicken.com>

	* tutorial.el (tutorial-warning-face): New face.
	(tutorial--detailed-help, tutorial--display-changes): Use it.
	(tutorial--find-changed-keys): Check ESC-prefix binding specially.