@@ -1,3 +1,8 @@
+2006-11-23  Michael Kifer  <kifer@cs.stonybrook.edu>
+	
+	* ediff-diff.el (ediff-exec-process, ediff-same-file-contents): remove
+	condition-case.
+	
 2006-11-23  Glenn Morris  <rgm@gnu.org>
 
 	* progmodes/f90.el (f90-comment-indent): Do not move point in
